# nmprofiler

./: README.md  global.mk
app/examples/profiler_host_dump/mc5103/nm/: Makefile  main.cpp  mc5103_stdout_nm.vcproj  proflist_generated.asm
app/examples/profiler_host_dump/mc5103/pc/: CMakeLists.txt
app/examples/profiler_host_print2tbl/make_mb7707/: Makefile  premake5.lua
app/examples/profiler_host_print2tbl/make_mc12101(nmc0)/: Makefile  premake5.lua
app/examples/profiler_host_print2tbl/make_mc12101(nmc1)/: Makefile  mc12101brd-nmc1.cfg  premake5.lua
app/examples/profiler_host_print2tbl/make_mc5103/: Makefile  mc5103brd.cfg  premake5.lua
app/examples/profiler_host_print2tbl/mc5103/nm/: Makefile  main.cpp  test.asm
app/examples/profiler_host_print2tbl/mc5103/pc/: Makefile  main.cpp  pc_connector_mc5103_io.h
app/examples/profiler_host_print2tbl/src_nm0/: nm-main0.cpp
app/examples/profiler_host_print2tbl/src_nm1/: nm-main1.cpp
app/examples/profiler_host_print2tbl/src_pc/: pc-main.cpp
app/examples/profiler_host_print2xml/: README.md
app/examples/profiler_host_print2xml/mc5103/nm/: main.cpp  mc5103_stdout_nm.vcproj  mc5103brd.cfg
app/examples/profiler_host_print2xml/mc5103/pc/: Makefile
app/examples/profiler_standalone_dump/: main.cpp  proflist_generated.asm  shared.asm
app/examples/profiler_standalone_dump/make_mb7707/: Makefile  mb7707brd.cfg
app/examples/profiler_standalone_dump/make_mc12101/: Makefile  mc12101brd-nmc0.cfg
app/examples/profiler_standalone_dump/make_mc5103/: Makefile  mc5103brd.cfg
app/examples/profiler_standalone_dump/make_mc7601/: Makefile
app/examples/profiler_standalone_print2tbl/: Makefile  main.cpp  proflist_generated.asm  test.asm
app/examples/profiler_standalone_print2tbl/make_mb7707/: Makefile
app/examples/profiler_standalone_print2tbl/make_mc12101/: Makefile  mc12101brd-nmc0.cfg
app/examples/profiler_standalone_print2tbl/make_mc5103/: Makefile  mc5103brd.cfg
app/examples/profiler_standalone_print2xml/: main.cpp  test.asm
app/examples/profiler_standalone_print2xml/make_mc12101/: Makefile
app/examples/profiler_standalone_print2xml/make_mc5103/: Makefile
app/templates/: Makefile  checktools.mk  global.mk  tests.mk
app/templates/sometest/: Makefile
app/templates/sometest/make_emu6405/: Makefile  emu6405.cfg
app/templates/sometest/make_gcc/: Makefile
app/templates/sometest/make_mb7707/: Makefile  mb7707brd.cfg
app/templates/sometest/make_mb7707_edcltool/: Makefile  mb7707brd.cfg
app/templates/sometest/make_mc12101/: Makefile  mc12101brd-nmc0.cfg  mc12101brd-nmc1.cfg
app/templates/sometest/make_mc5103/: Makefile
app/templates/sometest/make_mc7601/: Makefile  mc7601brd.cfg
app/templates/sometest/make_vs13/: Makefile
app/templates/sometest/make_vs80/: Makefile
include/: nmprofiler.h  nmprofiler.mlb
make/nmc3/: Makefile
make/nmc4/: Makefile
script/: generate_proflist.tcl  profile.xsl  profiledump2tbl.lua  proflist.lua  vs8.mk
src/nm/: injector.asm  printer.c  profiler.cpp
src/pc/: pc_profiler.cpp
